--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -56,23 +56,18 @@ li a:hover {
   
   </style>
 </head>
-    <div class="header">
-        <ul class="liste">
-            <li><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            {% if request.user.is_authenticated %}
-            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
-            {% else %}
-            <li><a href="{% url "login" %}"><i class="fa fa-key">Login</i></a></li>
-            <li><a href="{% url "register" %}"><i class="fa fa-address-card">Register</i></a></li>
-            {% endif %}
-            {% if request.user.is_authenticated %}
-            <li class="sollum">
-            <a href="#{{ request.user.username }}" onclick="onayla()" >
-            <i class="fa fa-address-card">  {{ request.user.username }}'s Account</i></a></li>
-            {% else %}
-            {% endif %}
-        </ul>
-    </div>
+<header>
+ <div class="topnav" id="myTopnav">
+  <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
+  {% if request.user.is_authenticated %}
+  <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
+  <a onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account &nbsp &nbsp</i></a>
+  {% else %}
+  <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
+  <a href="{% url 'register' %}" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp Register &nbsp &nbsp </i></a>
+  {% endif %}
+</div> 
+</header>
 <body translate="no" >
     <div class="wrapper">
 	<div class="desc">
