--- a/GCard/payment/templates/payment/signup.html
+++ b/GCard/payment/templates/payment/signup.html
@@ -11,53 +11,18 @@
   <link rel="stylesheet" href="{% static 'css/font.css'%} ">
   <link rel="stylesheet" href="{% static 'css/index.css' %}">
   <style>
-
-  #czz {
-	width: 300px;
-  height: 300px;}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #a9a9a9;
-    height: 60px;
-    margin-top: 10px;
-    border-radius: 4px;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 22px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: gray;
-}
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
   .header {
+    margin-top: 40px;
+    margin-bottom: 40px;
     width: 81%;
     height: 86px;
     border-radius: 8px;
-    margin-left: auto;
-    margin-right: auto;
   }
    
 button{
     background-color: #4CAF50;
     border: none;
-    width: 50%;
+    width: 100%;
     color: white;
     padding: 16px 32px;
     text-decoration: none;
@@ -67,14 +32,14 @@ button{
     -webkit-transition: width 0.4s ease-in-out;
 
 }
-input {
-    width: 50%;
+input{
+    width: 100%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
+    background-image: url(https://cdn2.iconfinder.com/data/icons/aspneticons_v1.0_Nov2006/view_16x16.gif);
     background-color: white;
-    background-image: url('https://cdn0.iconfinder.com/data/icons/octicons/1024/credit-card-16.png');
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
@@ -83,36 +48,77 @@ input {
 }
 </style>
 </head>
-    <div class="header">
-        <ul class="liste">
-            <li class="onx"><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            {% if request.user.is_authenticated %}
-            <li class="onx"><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
-            {% else %}
-            <li class="onx"><a href="{% url "login" %}"><i class="fa fa-key"> Login</i></a></li>
-            <li class="onx"><a href="{% url "register" %}"><i class="fa fa-address-card">Register</i></a></li>
-            {% endif %}
-            {% if request.user.is_authenticated %}
-            <li class="onx"><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
-            {% endif %}
-        </ul>
-    </div>
+<header>
+ <div class="topnav" id="myTopnav">
+  <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
+  {% if request.user.is_authenticated %}
+  <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
+  <a onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account &nbsp &nbsp</i></a>
+  {% else %}
+  <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
+  <a href="{% url 'register' %}" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp Register &nbsp &nbsp </i></a>
+  {% endif %}
+</div> 
+</header>
 <body translate="no" onload="myFunction()" >
     <div class="wrapper">
 	<div class="desc">
+		<center>
 		<h1>GCARD ~ EW2C</h1>
-		<p>Express Way To E-Commerce Without Sharing Any CC Info / Mobile Info</p>
+		<p><i class="fa fa-charge">Charge Your Card</i></p>
+	</center>
 	</div>
 	<div class="content">
 		<!-- content here -->
-        <center>
 		<div class="product-grid product-grid--flexbox">
 			<div class="product-grid__wrapper">
-				<form action="" method="POST">
-                {% csrf_token %}
+				<!-- Product list start here -->
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<center><h3>Günün F/P Ürünü</h3></center>
+						<div class="product-grid__img-wrapper">		
+							<img src="https://images.hepsiburada.net/assets/Bilgisayar/500/9604469719090.jpg" alt="Msi Vr One 7re-087tr" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">Msi Vr One 7re-087tr</span>
+						<span class="product-grid__price">14000 TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">MSI VR ONE 7RE-087TR Intel Core i7 7820HK 16GB 512GB SSD GTX1070 Windows 10 Pro Masaüstü Bilgisayar</p>
+								<a href="/detail/1"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="/detail/1"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<form action="." method="POST">
+				{% csrf_token %}
 				{{form.as_p}}
 				<button type="submit">Save</button>
-                </form></div></div>
+                </form>
+					</div>
+				</div>
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<center><h3>Günün Performans Ürünü</h3></center>
+						<div class="product-grid__img-wrapper">			
+							<img src="https://images.hepsiburada.net/assets/Bilgisayar/500/9703195443250.jpg" alt="Monster Semruk S7 V5.1" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">Monster Semruk S7 V5.1</span>
+						<span class="product-grid__price">25000 TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">Intel Core i7 7700K 32GB 2TB + 1TB SSD GTX1080 Windows 10 Home 17.3&quot; 4K Taşınabilir Bilgisayar</p>
+								<a href="/detail/3"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="/detail/3"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
             </center>
             </body>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -124,14 +130,14 @@ input {
 			document.body.innerHTML = document.body.innerHTML.replace("Enter the same password as before, for verification.", "");
 			document.body.innerHTML = document.body.innerHTML.replace("Your password must contain at least 8 characters.", "");
 			document.body.innerHTML = document.body.innerHTML.replace("<ul>", "");
-			document.body.innerHTML = document.body.innerHTML.replace("<li>", "");
-			document.body.innerHTML = document.body.innerHTML.replace("</li>", "");
-			document.body.innerHTML = document.body.innerHTML.replace("Username: ", "");
+			document.body.innerHTML = document.body.innerHTML.replace("<li></li>", "");
+			document.body.innerHTML = document.body.innerHTML.replace("<li></li>", "");
+			document.body.innerHTML = document.body.innerHTML.replace("<li></li>", "");
 			document.body.innerHTML = document.body.innerHTML.replace("Username: ", "");
 			document.body.innerHTML = document.body.innerHTML.replace('<input type="text" name="username" maxlength="150" autofocus required id="id_username" />', '<input placeholder="GCard ~ Username" type="text" name="username" maxlength="150" autofocus required id="id_username" />');
 			document.body.innerHTML = document.body.innerHTML.replace('<input type="password" name="password1" required id="id_password1" />', '<input placeholder="HiyarYaz5555eGonder" type="password" name="password1" required id="id_password1" />');
 			document.body.innerHTML = document.body.innerHTML.replace('Password confirmation: ', '');
-			document.body.innerHTML = document.body.innerHTML.replace("Password confirmation: ", "");
+			document.body.innerHTML = document.body.innerHTML.replace("Password confirmation:", "Confirm:");
 			document.body.innerHTML = document.body.innerHTML.replace("</ul>", "");			
 		}
     </script>
