--- a/GCard/templates/registration/login.html
+++ b/GCard/templates/registration/login.html
@@ -82,34 +82,77 @@ input {
 }
 </style>
 </head>
-    <div class="header">
-        <ul class="liste">
-            <li><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            {% if request.user.is_authenticated %}
-            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
-            {% else %}
-            <li><a href="{% url "login" %}"><i class="fa fa-key"> Login</i></a></li>
-            <li><a href="{% url "register" %}"><i class="fa fa-address-card">Register</i></a></li>
-            {% endif %}
-            <li><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
-        </ul>
-    </div>
+<header>
+ <div class="topnav" id="myTopnav">
+  <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
+  {% if request.user.is_authenticated %}
+  <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
+  <a onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account &nbsp &nbsp</i></a>
+  {% else %}
+  <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
+  <a href="{% url 'register' %}" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp Register &nbsp &nbsp </i></a>
+  {% endif %}
+</div> 
+</header>
 <body translate="no" onload="myFunction()" >
     <div class="wrapper">
 	<div class="desc">
+		<center>
 		<h1>GCARD ~ EW2C</h1>
-		<p>Express Way To E-Commerce Without Sharing Any CC Info / Mobile Info</p>
+		<p><i class="fa fa-charge">Charge Your Card</i></p>
+	</center>
 	</div>
 	<div class="content">
 		<!-- content here -->
-        <center>
 		<div class="product-grid product-grid--flexbox">
 			<div class="product-grid__wrapper">
-				<form action="." method="POST">
+				<!-- Product list start here -->
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<center><h3>Günün F/P Ürünü</h3></center>
+						<div class="product-grid__img-wrapper">		
+							<img src="https://images.hepsiburada.net/assets/Bilgisayar/500/9604469719090.jpg" alt="Msi Vr One 7re-087tr" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">Msi Vr One 7re-087tr</span>
+						<span class="product-grid__price">14000 TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">MSI VR ONE 7RE-087TR Intel Core i7 7820HK 16GB 512GB SSD GTX1070 Windows 10 Pro Masaüstü Bilgisayar</p>
+								<a href="/detail/1"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="/detail/1"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<form action="." method="POST">
 				{% csrf_token %}
 				{{form.as_p}}
 				<button type="submit">Save</button>
-                </form></div></div>
+                </form>
+					</div>
+				</div>
+				
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<center><h3>Günün Performans Ürünü</h3></center>
+						<div class="product-grid__img-wrapper">			
+							<img src="https://images.hepsiburada.net/assets/Bilgisayar/500/9703195443250.jpg" alt="Monster Semruk S7 V5.1" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">Monster Semruk S7 V5.1</span>
+						<span class="product-grid__price">25000 TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">Intel Core i7 7700K 32GB 2TB + 1TB SSD GTX1080 Windows 10 Home 17.3&quot; 4K Taşınabilir Bilgisayar</p>
+								<a href="/detail/3"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="/detail/3"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
             </center>
             </body>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
